# honeyclean

./: .gitignore  LICENSE  README.md  base.toml  environment.yml  pyproject.toml
.github/workflows/: test.yml
src/: base.toml
src/honeyclean/: __init__.py  cli.py  config.py  profiler.py  validators.py
src/honeyclean/analyzers/: __init__.py  data_conversion.py  enhanced.py  recommendations.py  statistical.py  type_inference.py
src/honeyclean/reports/: __init__.py  powerpoint.py
src/honeyclean/utils/: __init__.py  formatters.py
src/honeyclean/visualizations/: __init__.py  generators.py
src/setup/: environment.yml  setup.py
tests/: test_basic.py  test_pydantic.py  test_validators.py
